# Eurekaimer.github.io

./: .gitignore  404.html  CNAME  README.md  astro-paper.config.ts  astro.config.ts  eurekaimer-effect.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  main.py  mkdocs.yml  package.json  pyproject.toml  sitemap.xml  tags.json
.github/workflows/: deploy.yml
Blog/: index.html
Blog/2024总结/: index.html
Eurekaimer/: ai_summary_cache.json  hooks.py  mkdocs.yml  requirements.txt
Eurekaimer/docs/: api.py  index.md  tags.md
Eurekaimer/overrides/: main.html
Eurekaimer/site/: 404.html  CNAME  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  sitemap.xml  tags.json
GTM/Measure and Category/: index.html
Tutorial/C/: index.html
Tutorial/Java/: index.html
Tutorial/Python/: index.html
about/: index.html
api/: index.html
blog/: index.html
css/: extra.css  mouse.css  mouse_pattern_svg.css
javascripts/: main.js  mouse.js
public/: CNAME
search/: search_index.json
site/tags/: index.html
site/代数学/: index.html
site/分析学/: index.html
site/数学建模/: index.html
src/components/: BlueBirdIcon.astro  Card.astro  Footer.astro  GiscusComments.astro  Header.astro
src/layouts/: Layout.astro
src/pages/: friends.astro  index.astro  showcase.astro
tags/: index.html
代数学/: index.html  高等代数.html
分析学/: index.html
数学建模/: index.html
数据科学/: index.html
更新日志/: index.html
科研竞赛/: index.html
网络资源整合/: index.html
计算机科学/: index.html
(+717 files in other folders)
